--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-transition-group": "^4.3.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
+    "reselect": "^4.0.0",
     "shortid": "^2.2.15"
   },
   "scripts": {
